--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -1,9 +1,15 @@
 ---
-title: "Untitled"
+title: "Rとigraphを使ったネットワーク解析と可視化"
+author: "Katherine Ognyanova 著; 田村 昌士 根本 清貴 訳"
+date: "10 January 2018"
 output:
   html_document: default
   pdf_document: default
 ---
+
+このワークショップで用いるデータは、[ここ](http://www.kateto.net/wordpress/wp-content/uploads/2016/01/netscix2016.zip)からダウンロードするか、http://kateto.net/netscix2016 から入手してください。
+
+このチュートリアルではRのパッケージであるigraphを用いてネットワーク解析とネットワークの可視化の基本を学びます。igraphは Gabor Csardi と Tamas Nepusz によってメンテナンスされています。igraph ライブラリを使うことで、R, Python, C/C++ 言語において様々な方法でネットワークの解析や可視化ができます。このワークショップでは R での igraph を扱います。RとRStudioのインストールが必要です。また、R用のigraphの最新版もインストールしてください。Rから以下のようにタイプしていただければインストールできます。
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -15,45 +21,45 @@ install.packages("igraph")
 
 ##1. Rにおける基本的な覚書
 
-ネットワークを使った作業を始める前に、Rにおけるシンプルタスクと原理をいくつか簡単に紹介／おさらいしておきましょう。  
+ネットワークを扱う前に、Rの基本を簡単に紹介／おさらいしておきましょう。  
 
 ###1.1 代入
 
-あるオブジェクトに値を代入したい時にはassign(), <-, もしくは=を使います。  
+あるオブジェクトに値を代入したい時にはassign(), <-, = のいずれかを使います。  
 
 ```{r, eval=F}
-x <- 3        # xに3を代入
-x             # 式の値を求め、結果を出力
+x <- 3        # xに3を代入します
+x             # 式の値を求め、結果を出力します
 
-y <- 4        # yに4を代入
-y + 5         # 式の値を求めますが、yは4のまま
+y <- 4        # yに4を代入します
+y + 5         # 式の値を求めますが、yは4のままです
 
 z <- x + 17*y # 代入
 z             # 式の値を求めます
 
 rm(z)         # remove z: zというオブジェクトを消去します
-z             # zを出力してもエラーが出ます！
+z             # zを出力しようとするとエラーが出ます！
 ```
 
 ###1.2 値の比較
 
-標準的な演算子である<, >, <=, >=, ==(等式), !=(不等式)を使うことができます。比較はブーリアン値、すなわちTRUEかFALSEを返します(
-単にTとFに略されることが多いです)。
+標準的な演算子である <, >, <=, >=, ==(等式), !=(不等式)を使うことができます。比較はブーリアン値、すなわちTRUEかFALSEを返します(
+単にTとFで略されることが多いです)。
 
 ```{r, eval=F}
-2==2          # 等式
-2!=2          # 不等式
+2==2          # 等しい
+2!=2          # 等しくない
 x <= y        # 以下："<"や">"、">="も使えます
 ```
 
 ###1.3 特殊な定数  
 
-特殊定数には以下のようなものがあります。
+特殊な定数には以下のようなものがあります。
 
-- NA: データが欠損しているか不詳な場合
-- NULL: 空オブジェクト（例えば、ヌル/空リスト）
-- Infおよび-Inf: 正と負の無限大
-- NaN: 正確な演算結果が得られない場合
+- **NA**: データが欠損しているか不詳な場合
+- **NULL**: 空オブジェクト（例えば、ヌル/空リスト）
+- **Inf** および **-Inf**: 正と負の無限大
+- **NaN**: 正確な演算結果が得られない場合
 
 ```{r, eval=F}
 # NA - データが欠損しているか不詳な場合
@@ -64,14 +70,14 @@ is.na(5+NA) # 欠損がないかをチェック
 is.null(NULL) # NULLかどうかチェックできます
 ```
 
-Infや-Infは正と負の無限を意味します。ある数字をゼロで割った時のような数学的演算で返されます。  
+Infや-Infは正と負の無限大を意味します。ある数字をゼロで割った時のような数学的演算で返されます。  
 
 ```{r, eval=F}
 5/0
 is.finite(5/0) # その数字が有限か確認します（この場合は違います）
 ```
 
-NaN (Not a Number)は、ゼロをゼロで割った時のように合理的に定義されない操作を行った結果として出力されます。
+NaN (Not a Number)は、ゼロをゼロで割るといった適切でない演算を行った結果として出力されます。
 
 ```{r, eval=F}
 0/0
@@ -83,8 +89,8 @@ is.nan(0/0)
 ベクトルはRにおける重要な機能であるc()を使って作図できます。
 
 ```{r, eval=F}
-v1 <- c(1, 5, 11, 33)      # 長さ4の実数ベクトル
-v2 <- c("hello","world")   # 長さ2の文字列ベクトル
+v1 <- c(1, 5, 11, 33)      # 要素数4の実数ベクトル
+v2 <- c("hello","world")   # 要素数2の文字列ベクトル
 v3 <- c(TRUE, TRUE, FALSE) # 論理値ベクトルで、c(T, T, F)と同じ
 ```
 
