--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -218,54 +218,51 @@ as.character(eye.col.v)
 行列は次元をもったベクトルです。
 
 ```{r, eval=F}
-m <- rep(1, 20) # 全てが1の20個の要素のベクトル
-dim(m) <- c(5,4) # 次元は5と4に設定されているので、ここでのmは5x4の行列を表わします。
+m <- rep(1, 20) # 全てが1の20個の要素からなるベクトル
+dim(m) <- c(5,4) # 次元は5と4に設定されているので、ここでのmは5行4列の行列
 ```
 
 matrix()を使って、ある行列を作ってみましょう。
 ```{r, eval=T}
-m <- matrix(data=1, nrow=5, ncol=4) # 上の行列と同じで、5x4の全て1の行列
+m <- matrix(data=1, nrow=5, ncol=4) # 上の行列と同じで、5行4列の全てが1の行列
 m <- matrix(1,5,4) # 同上
 dim(m) # mの次元はいくつでしょうか？
 ```
 
 ベクトルを組合せて行列を作ってみましょう。
 ```{r, eval=F}
-m <- cbind(1:5, 5:1, 5:9) # 3つのベクトルを列としてまとめ、5x3 の行列にします。
-m <- rbind(1:5, 5:1, 5:9) # 3つのベクトルを行としてまとめ、3x5 の行列にします。
+m <- cbind(1:5, 5:1, 5:9) # 3つのベクトルを列としてまとめ、5行3列 の行列にする
+m <- rbind(1:5, 5:1, 5:9) # 3つのベクトルを行としてまとめ、3行5列 の行列にする
 ```
 
 行列の要素を選びましょう。
 ```{r, eval=F}
 m <- matrix(1:10,10,10)
-m[2,3] # 行列mの2行、3列目の単一のセルを選択します。
+m[2,3] # 行列mの第2行、第3列にある単一のセルを選択
 m[2,] # 行列mの2行目全体を1つのベクトルとして
 m[,2] # 行列mの2列目全体を1つのベクトルとして
-m[1:2,4:6] # 1行目と2行目、4から6列目の部分行列
+m[1:2,4:6] # 1行目と2行目、4列目から6列目の部分行列
 m[-1,] # 最初の1行"を除く"すべての行
 ```
 
 行列を用いたその他の操作です。
 ```{r, eval=F}
-# 1行目の要素が対応する1行目の要素と等しいか。
-m[1,]==m[,1]
-# 行列mの要素が3より大きければTRUEを、さもなくばFALSEを返すという論理値行列です。
-m>3
-# TRUE要素、すなわち3より大きい要素のみ選択します。
-m[m>3]
+m[1,]==m[,1] # 1行目の要素が、対応する1列目の要素と等しいか
+m>3 # 行列mの要素が3より大きければTRUEを、さもなくばFALSEを返す論理値行列
+m[m>3]# TRUE要素、すなわち3より大きい要素のみ選択
 ```
 
 ```{r, eval=F}
-t(m) # 行列mを移項（行と列を入れ替えること）します。
-m <- t(m) # 行列mに移項したmを割り当てます。
-m %*% t(m) # %*%で行列の乗算を行います。
-m * m # *で要素ごとの乗算を行います。
+t(m) # 行列mの行と列を入れ替え (移項transpose)
+m <- t(m) # 移項したmを新たな行列mとする
+m %*% t(m) # %*%で行列の乗算
+m * m # *で要素ごとの乗算
 ```
 
 配列は、次元が2以上の時に用います。array()機能を用いて作成できます：
 ```{r, eval=F}
-a <- array(data=1:18,dim=c(3,3,2)) # 3x3x2の3次元配列です。
-a <- array(1:18,c(3,3,2)) # 上と同様の配列を意味します。
+a <- array(data=1:18,dim=c(3,3,2)) # 3x3x2の3次元配列
+a <- array(1:18,c(3,3,2)) # 上と同様の配列を意味
 ```
 
 
