Rのコマンド内のコメントはである調で統一

--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -271,7 +271,7 @@ a <- array(1:18,c(3,3,2)) # 上と同様の配列を意味
 リストはオブジェクトの集合です。1つのリストにあらゆる種類の要素、すなわち文字列、数値ベクトル、行列、別のリストなどを入れることができます。こうすることで、リストにある要素に簡単にアクセスできます。
 
 ```{r, eval=F}
-l1 <- list(boo=v1,foo=v2,moo=v3,zoo="Animals!") # 4つのコンポーネントからなるリストです。
+l1 <- list(boo=v1,foo=v2,moo=v3,zoo="Animals!") # 4つのコンポーネントからなるリスト
 l2 <- list(v1,v2,v3,"Animals!")
 ```
 
@@ -283,29 +283,29 @@ l4 <- NULL
 
 リストの要素にアクセスしてみましょう。
 ```{r, eval=F}
-l1["boo"] # シングルブラケットでbooにアクセスすると、リストを返します。
-l1[["boo"]] # ダブルブラケットでbooにアクセスすると、数値ベクトルを返します。
-l1[[1]] # リストの最初のコンポーネントを返すので、上と同じ意味です。
-l1$boo # $作用素を用いると、ダブルブラケットと同じように名前のついた要素にアクセスできます。
+l1["boo"] # シングルブラケットでbooにアクセスすると、リストを返す
+l1[["boo"]] # ダブルブラケットでbooにアクセスすると、数値ベクトルを返す
+l1[[1]] # リストの最初のコンポーネントを返すので、上と同じ意味
+l1$boo # $作用素を用いると、ダブルブラケットと同じように名前のついた要素にアクセスできる
 ```
 
 リストにさらなる要素を付け加えましょう。
 ```{r, eval=F}
-l3[[1]] <- 11 # 空のリストl3に要素を加えます。
-l4[[3]] <- c(22, 23) # 空のリストl4の3つ目の要素としてベクトルを加えます。
+l3[[1]] <- 11 # 空のリストl3に要素を加える
+l4[[3]] <- c(22, 23) # 空のリストl4の3つ目の要素としてベクトルを加える
 ```
 
 上でリストl4の3つ目の要素にベクトルを加えたので、1つ目と2つ目の要素が生成され、空値(NULL)が与えられます。
 
 ```{r, eval=F}
-l1[[5]] <- "More elements!" # リストl1には4つの要素があったので、ここで5つ目を加えました。
+l1[[5]] <- "More elements!" # リストl1には4つの要素があったので、ここで5つ目を加えた
 l1[[8]] <- 1:11
 ```
 
 上で8つ目の要素を加えましたが、6・7番目はなかったので、空値(NULL)が生成されます。
 
 ```{r, eval=F}
-l1$Something <- "A thing" # 9番目の要素に"something"と名付けられた"A thing"が加えられました。
+l1$Something <- "A thing" # 9番目の要素に"something"と名付けられた"A thing"が加えられた
 ```
 
 ### 1.8 データフレーム
