1章の翻訳をすべて確認

--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -332,14 +332,14 @@ dfr1$FirstName <- as.vector(dfr1$FirstName)
 その他に、stringsAsFactors=FALSEを使うことで、最初からRに要因ベクトルはイヤだよと伝えることもできます。
 ```{r, eval=T}
 dfr2 <- data.frame(FirstName=c("John","Jim","Jane","Jill"), stringsAsFactors=F)
-dfr2$FirstName # 成功：要因ベクトルではありません
+dfr2$FirstName # 成功：要因ベクトルではない
 ```
 
 データフレームの要素にアクセスしてみましょう。
 ```{r, eval=F}
 dfr1[1,] # 1行目の全列
 dfr1[,1] # 1列目の全行
-dfr1$Age # Ageの列の全行
+dfr1$Age # Age列の全行
 dfr1[1:2,3:4] # 1・2行目の3・4列、つまりJohnとJimのgenderとage
 dfr1[c(1,3),] # 1行目と3行目の全列
 ```
@@ -356,17 +356,17 @@ mean ( dfr1[dfr1$Female==TRUE,4] )
 
 ### 1.9 フロー制御とループ
 
-Rにおける制御とループはすごく単純です（下記参照）。前者は一連のコード（コードブロック）を実行するかを、後者はそれを何回実行するかを決定します。Rにおけるコードブロックは中カッコ{}で囲まれています。
+Rにおける制御とループはすごく単純です (下記参照)。前者は一連のコード (コードブロック) を実行するかを、後者はそれを何回実行するかを決定します。Rにおけるコードブロックは中カッコ{}で囲まれています。
 
 ```{r, eval=T}
-# if (条件) expr1 else expr2
+# if (条件) 処理1 else 処理2
 x <- 5; y <- 10
 if (x==0) y <- 0 else y <- y/x #
 y
 ```
 
 ```{r, eval=T}
-# for (変数を順番に入れる) expr
+# for (連続する変数) 処理
 ASum <- 0; AProd <- 1
 for (i in 1:x)
 {
@@ -381,16 +381,16 @@ AProd # prod(1:x)と同義
 ```
 
 ```{r, eval=F}
-# while (条件) expr
+# while (条件) 処理
 while (x > 0) {print(x); x <- x-1;}
 
-# 式を繰り返し、, ループを終えるためにbreakを用います
+# 式を繰り返し、, ループを終えるためにbreakを使う
 repeat { print(x); x <- x+1; if (x>10) break}
 ```
 
 ### 1.10 Rのプロットと色
 
-大半のRの機能において、既定色、16進法、もしくはRGB値が使えます。下のように単にRで図をプロットする時は、xとyが点の座標で、pch は点の形、cexが点のサイズ、colが色を表わします。Rでプロットする際にパラメータを見たい時は、?parで確認しましょう。
+大半のRの関数では、色の名称、16進数、RGB値で色を指定できます。下のように単にRで図をプロットする時は、`x`と`y`が点の座標で、`pch` は点の形、`cex`が点のサイズ、`col`が色を表わします。Rでプロットする際にパラメータを確認したい時は、`?par`で確認しましょう。
 
 ```{r, eval=T}
 plot(x=1:10, y=rep(5,10), pch=19, cex=3, col="dark red")
@@ -398,71 +398,70 @@ points(x=1:10, y=rep(6, 10), pch=19, cex=3, col="557799")
 points(x=1:10, y=rep(4, 10), pch=19, cex=3, col=rgb(.25, .5, .3))
 ```
 
-RGBのレンジが0から1になっていることにお気づきでしょう。Rのデフォルトではこうなっていますが、rgb(10, 100, 100, maxColorValue=255)のようにセットすることもできます。
-不透明度/透過率はalphaのパラメータ（0から1までの範囲）で設定できます。
+RGBのレンジが0から1になっていることにお気づきでしょう。Rのデフォルトではこうなっていますが、`rgb(10, 100, 100, maxColorValue=255)`のようにセットすることもできます。
+不透明度/透過率は`alpha`のパラメータ（0から1までの範囲）で設定できます。
 
 ```{r, eval=T}
-plot(x=1:5, y=rep(5,5), pch=19, cex=12, col=rgb(.25, .5, .3, alpha=.5), xlim=c(0,6))
+plot(x=1:5, y=rep(5,5), pch=19, cex=20, col=rgb(.25, .5, .3, alpha=.5), xlim=c(0,6))
 ```
 
-16進法で色彩表現するなら、grDevicesパッケージのadjustcolorを使って透過率alphaを設定できます。遊びがてら、グラフのパラメータとして用いるpar()の機能を使って、グラフの背景をグレーにしてみましょう。
+16進法で色彩表現するなら、`grDevices`パッケージの`adjustcolor`を使って透過率alphaを設定できます。遊びがてら、グラフのパラメータとして用いる`par()`の機能を使って、グラフの背景をグレーにしてみましょう。
 
 ```{r, eval=T}
 par(bg="gray40")
 col.tr <- grDevices::adjustcolor("557799", alpha=0.7)
-plot(x=1:5, y=rep(5,5), pch=19, cex=12, col=col.tr, xlim=c(0,6))
+plot(x=1:5, y=rep(5,5), pch=19, cex=20, col=col.tr, xlim=c(0,6))
 ```
 
-ビルトインされた既定色を使いたいなら、これが全色をリストアップする方法です:
+ビルトインされている色の名前を使いたいなら、これが全色の名前をリストアップする方法です:
 
 ```{r, eval=F}
 colors() # 全ての既定色をリストアップ
 grep("blue", colors(), value=T) # 名前に"blue"の付く色
 ```
 
-たくさんの対比色や色合いが必要になる場合も多いです。Rにはいくつかの既定されたパレット機能が搭載されていて、自動で生成してくれます。例えば：
+たくさんの対比色や色合いが必要になる場合も多いです。Rにはいくつか前もって設定されている色の組み合わせ(パレット)が搭載されていて、自動で生成してくれます。例えば：
 
 ```{r, eval=T}
-pal1 <- heat.colors(5, alpha=1) # ヒートパレットから5色、不透明
-pal2 <- rainbow(5, alpha=.5) # レインボーから5色、半透明
-plot(x=1:10, y=1:10, pch=19, cex=5, col=pal1)
+pal1 <- heat.colors(5, alpha=1) # heatパレットから5色、不透明
+pal2 <- rainbow(5, alpha=.5) # rainbowパレットから5色、半透明
+plot(x=1:10, y=1:10, pch=19, cex=10, col=pal1)
 ```
 
 ```{r, eval=T}
-plot(x=1:10, y=1:10, pch=19, cex=5, col=pal2)
+plot(x=1:10, y=1:10, pch=19, cex=10, col=pal2)
 ```
 
-colorRampPaletteを使えば、自分で階調をつくることもできます。パレットから好きな色だけを生成して使うことができるのがcolorRampPalette
-の機能です。
+`colorRampPalette`を使えば、自分で色階調をつくることもできます。`colorRampPalette`はパレットから自分が好きな色を抜き出してくれる関数を戻り値として返すことに注意してください。
 
 ```{r, eval=T}
 palf <- colorRampPalette(c("gray80", "dark red"))
-plot(x=10:1, y=1:10, pch=19, cex=5, col=palf(10))
+plot(x=10:1, y=1:10, pch=19, cex=10, col=palf(10))
 ```
 
-colorRampPaletteに透過性も加えたい時は、alpha=TRUEのパラメータを使ってください。
+colorRampPaletteに透過性も加えたい時は、`alpha=TRUE`のパラメータを使ってください。
 
 ```{r, eval=T}
 palf <- colorRampPalette(c(rgb(1,1,1, .2),rgb(.8,0,0, .7)), alpha=TRUE)
-plot(x=10:1, y=1:10, pch=19, cex=5, col=palf(10))
+plot(x=10:1, y=1:10, pch=19, cex=10, col=palf(10))
 ```
 
 ### 1.11 Rのトラブルシューティング
 
 Rを使っているとたくさんのエラーを出してしまうもので、とても独創的なこともあります。しかし、たいていの間違いは次の3つに集約できます。
 
-1. 大文字と小文字：Rでは大文字と小文字とを区別しますので、グラフの頂点の名前が“Jack”の場合、“jack”とは異なります。rowSumsという機能もrowsumsやRowSumsでは動きません。
+1. *大文字と小文字* Rでは大文字と小文字とを区別しますので、グラフの頂点の名前が“Jack”の場合、“jack”とは異なります。`rowSums`という関数も`rowsums`や`RowSums`では動きません。
 
-2. オブジェクトのクラス：多くの機能はあなたが放り込んだものを何でも受け取ってくれますが、中には意外にも数値ベクトルの代わりに固有ベクトルや要因ベクトル、データフレームの代わりに行列を要求されることがあります。時には予想外のフォーマットで結果を返してくる機能もあります。
+2. *オブジェクトのクラス* 多くの関数はあなたが放り込んだものを何でも受け取ってくれますが、中には意外にも数値ベクトルの代わりに固有ベクトルや要因ベクトル、データフレームの代わりに行列を要求されることがあります。時には予想外のフォーマットで結果を返してくる関数もあります。
 
-3. パッケージをまたぐ同一の変数名：異なるパッケージで同一の名前が含まれるがゆえに生じる問題がたまにあります。こういった場合、“The following object(s) are masked from ‘package:igraph’ as you load a package.”といった具合にRから警告されます。この問題への対策が1つあります。::を使うことによって、あるパッケージのみから関数を呼ぶことができます。例えば、 blah()関数がAとBのパッケージ両方にある場合、A::blahとかB::blahと入力すればよいのです。パッケージを特定の順番でロードしなければならなかったり、あるいは一緒には使えなかったりするともっと問題が複雑化するもあります。例えば（このワークショップにも関係する話ですが）、igraphとStatnetの両パッケージを同時にロードするといくつかの問題が生じます。ですから、1つをデタッチしてからもう片方をロードするのがベストです。
+3. `パッケージをまたぐ同一の変数名` 異なるパッケージで同一の名前が含まれるがゆえに生じる問題がたまにあります。こういった場合、パッケージを読みこもうとすると、“The following object(s) are masked from ‘package:igraph’ といった具合に警告が表示されます。この問題への対策が1つあります。 `::` を使うことによって、あるパッケージのみから関数を呼ぶことができます。例えば、  `blah()` 関数がAとBのパッケージ両方にある場合、 `A::blah` とか `B::blah` と入力すればよいのです。パッケージを特定の順番でロードしなければならなかったり、あるいは一緒には使えなかったりするともっと問題が複雑化するもあります。例えば (このワークショップにも関係する話ですが) 、igraphとStatnetの両パッケージを同時に読み込むといくつかの問題が生じます。ですから、1つを切り離してからもう片方を読み込むのがベストです。
 
 ```{r, eval=F}
-library(igraph) # load a package
-detach(package:igraph) # detach a package
+library(igraph) # パッケージの読み込み
+detach(package:igraph) # パッケージの切り離し
 ```
 
-もっと複雑なトラブルシューティングに関しては、try(), tryCatch(), あるいは debug()を試してみてください。
+もっと複雑なトラブルシューティングに関しては、 `try()`, `tryCatch()`, あるいは `debug()` を試してみてください。
 
 
 ## 2. igraphにおけるネットワーク
@@ -802,12 +801,12 @@ dim(nodes2)
 -dはネットワークのエッジをあらわします。最初の2つの列にソースのIDと各エッジの対象ノードがきます。つづいてエッジの属性（重み、方、ラベルなど）が入ります。
 -頂点の方は、最初の列にノードのIDがきます。以降の列に入るものはノードの属性とみなされます。
 
-### 4.1 データセット１
+load(".RData")
+
+### 4.1 データセット1
 
 ```{r, eval=T}
 library(igraph)
-
-load(file = ".RData")
 
 net <- graph.data.frame(d=links, vertices=nodes, directed=T)
 class(net)
@@ -1582,3 +1581,5 @@ assortativity(net, V(net)$audience.size, directed=F)
 ```{r, eval=T}
 assortativity_degree(net, directed=F)
 ```
+
+save.image()
