1章の文字の強調表現を原著と統一

--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -25,7 +25,7 @@ install.packages("igraph")
 
 ### 1.1 代入
 
-あるオブジェクトに値を代入したい時にはassign(), <-, = のいずれかを使います。  
+あるオブジェクトに値を代入したい時には `assign()`, `<-`, `=` のいずれかを使います。  
 
 ```{r, eval=F}
 x <- 3        # xに3を代入します
@@ -43,8 +43,7 @@ z             # zを出力しようとするとエラーが出ます！
 
 ### 1.2 値の比較
 
-標準的な演算子である <, >, <=, >=, ==(等式), !=(不等式)を使うことができます。比較はブーリアン値、すなわちTRUEかFALSEを返します(
-単にTとFで略されることが多いです)。
+標準的な演算子である `<`, `>`, `<=`, `>=`, `==`(等しい), `!=`(等しくない)を使うことができます。比較はブーリアン値、すなわち `TRUE` か `FALSE` を返します(単に `T` と `F` で略されることが多いです)。
 
 ```{r, eval=F}
 2==2          # 等しい
@@ -86,7 +85,7 @@ is.nan(0/0)
 
 ### 1.4 ベクトル
 
-ベクトルはRにおける重要な機能であるc()を使って作図できます。
+ベクトルはRにおける重要な関数である `c()` を使って作図できます。
 
 ```{r, eval=F}
 v1 <- c(1, 5, 11, 33)      # 要素数4の実数ベクトル
@@ -323,13 +322,13 @@ Age=c(22,33,44,55) )
 dfr1$FirstName # dfr1の2列目にアクセスします。
 ```
 
-Rではdfr1$FirstNameを1つのカテゴリー変数として認識しますので、文字列ベクトルではなく、1つの要因ベクトルとして扱われる点に注意しましょう。それではRに'FirstName'が単一ベクトルであることを伝え、この問題を解決しましょう。
+Rでは `dfr1$FirstName` を1つのカテゴリー変数として認識しますので、文字列ベクトルではなく、1つの要因ベクトルとして扱われる点に注意しましょう。それではRに'FirstName'が単一ベクトルであることを伝え、この問題を解決しましょう。
 
 ```{r, eval=F}
 dfr1$FirstName <- as.vector(dfr1$FirstName)
 ```
 
-その他に、stringsAsFactors=FALSEを使うことで、最初からRに要因ベクトルはイヤだよと伝えることもできます。
+その他に、`stringsAsFactors=FALSE` を使うことで、最初からRに要因ベクトルはイヤだよと伝えることもできます。
 ```{r, eval=T}
 dfr2 <- data.frame(FirstName=c("John","Jim","Jane","Jill"), stringsAsFactors=F)
 dfr2$FirstName # 成功：要因ベクトルではない
