--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -518,7 +518,7 @@ vertex.frame.color="gray", vertex.label.color="black",
 vertex.label.cex=0.8, vertex.label.dist=2, edge.curved=0.2)
 ```
 
-小さなグラフなら、以下のような記述で作成することもできます。**-** は方向性のないつながり、**+-** (左向き)もしくは **-+** (右向き)は方向性のあるつながり、 **++** は両方向性のつながり、***:*** は頂点のセットを表します。
+小さなグラフなら、以下のような記述で作成することもできます。`-` は方向性のないつながり、`+-` (左向き)もしくは `-+` (右向き)は方向性のあるつながり、 `++` は両方向性のつながり、`:` は頂点のセットを表します。
 
 ```{r, eval=T}
 plot(graph_from_literal(a---b, b---c)) # ハイフンの数はいくつでも構わない
