--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -541,19 +541,19 @@ gl <- graph_from_literal(a-b-c-d-e-f, a-g-h-b, h-e:f:i, j)
 plot(gl)
 ```
 
-### 2.2 辺、頂点、ネットワークの特性（属性）
+### 2.2 辺、頂点、ネットワークの属性
 
 頂点と辺にアクセスします。
 
 ```{r, eval=T}
-E(g4) # そのオブジェクトの辺を表わします。
+E(g4) # オブジェクトの辺
 ```
 
 ```{r, eval=T}
-V(g4) # そのオブジェクトの頂点を表わします。
+V(g4) # オブジェクトの頂点
 ```
 
-直接ネットワークの行列を調べることもできます。
+ネットワークの行列を直接操作することもできます。
 
 ```{r, eval=T}
 g4[]
@@ -566,16 +566,16 @@ g4[1,]
 ネットワークや頂点、辺に属性を付加します。
 
 ```{r, eval=T}
-V(g4)$name # ネットワークを作成すると自動的に生成されます。
+V(g4)$name # ネットワークを作成すると自動的に生成される
 ```
 
 ```{r, eval=F}
 V(g4)$gender <- c("male", "male", "male", "male", "female", "female", "male")
-E(g4)$type <- "email" # 辺の属性。全ての辺に"email"を割り当てます。
-E(g4)$weight <- 10 # 辺の重み付け。全ての辺に10を割り当てます。
+E(g4)$type <- "email" # 辺の属性。全ての辺に"email"を割り当てる
+E(g4)$weight <- 10 # 辺の重み付け。全ての辺に10を割り当てる
 ```
 
-属性を調べます。
+属性を調べてみましょう。
 
 ```{r, eval=T}
 edge_attr(g4)
@@ -589,7 +589,7 @@ vertex_attr(g4)
 graph_attr(g4)
 ```
 
-属性を設定する別の方法として、set_edge_atttr()やset_vertex_attr()などが使えます。
+属性を設定する別の方法は以下があります。(set_edge_atttr()やset_vertex_attr()なども同様に使えます)
 
 ```{r, eval=T}
 g4 <- set_graph_attr(g4, "name","Email Network")
@@ -616,11 +616,11 @@ plot(g4, edge.arrow.size=.5, vertex.label.color="black", vertex.label.dist=1.5,
 vertex.color=c( "pink", "skyblue")[1+(V(g4)$gender=="male")] )
 ```
 
-グラフg4ではJimからJackに向かうエッジが2つあり、JohnからJohn自身に戻るループがあります。ループや同一のノードを結ぶ複数のエッを消去することでグラフをシンプルにすることはできます。edge.attr.combを使えば、どのエッジの属性をまとめるかが示され、sum, mean, prod (product), min, max, first/last (最初と最後のエッジの属性を選択)などのオプションも有用です。“ignore”というオプションを使うと、属性が無視され、除去されます。
+グラフ `g4` ではJimからJackに向かうエッジが2つあり、JohnからJohn自身に戻るループがあります。ループや同一のノードを結ぶ複数のエッジを消去することでグラフをシンプルにすることができます。`edge.attr.comb` を使えば、どのエッジの属性をまとめるかを示すことができます。オプションとして、`sum`, `mean`, `prod` (product), `min`, `max`, `first/last` (最初と最後のエッジの属性を選択)などがあります。“ignore”というオプションを使うと、属性が無視され、除去されます。
 
 ```{r, eval=T}
 g4s <- simplify( g4, remove.multiple = T, remove.loops = F,
-edge.attr.comb=c(weight="sum", type="ignore") )
+                 edge.attr.comb=c(weight="sum", type="ignore") )
 plot(g4s, vertex.label.dist=1.5)
 ```
 
@@ -630,16 +630,16 @@ g4s
 
 igraphオブジェクトの記述は4つの文字から始まります。
 
-1. DもしくはUはグラフの方向性の有無を表わします
-2. Nは名前の付いたグラフかどうか（ノードに名前属性がある）
-3. Wは重み付けされたグラフかどうか（エッジに重み付け属性がある）
-4. Bは2モードグラフ（ノードに型属性がある）
+1. DもしくはU: グラフが方向性か無向性か
+2. N: 名前の付いたグラフか (ノードに `name` 属性がある)
+3. W: 重み付けされたグラフか (エッジに `weight` 属性がある)
+4. B: 2部グラフ (2モードグラフ)か (ノードに `type` 属性がある)
 
 これに続く2つの数字（例えば7 5）はグラフのノードとエッジの数を表わします。ノードとエッジの属性も以下のように記述されます。
 
-- (g/c) - グラフレベルの固有属性
-- (v/c) - 頂点レベルの固有属性
-- (e/n) - エッジレベルの数値属性
+- (g/c) - グラフレベルでの固有属性
+- (v/c) - 頂点レベルでの固有属性
+- (e/n) - エッジレベルでの数値属性
 
 ### 2.3 特定のグラフとグラフモデル
 
