--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -738,13 +738,13 @@ plot(tr, vertex.size=10, vertex.label=NA)
 plot(rn %du% tr, vertex.size=10, vertex.label=NA)
 ```
 
-## 3. ファイルからネットワークデータを読み込む
+## 3. ネットワークデータのファイルからの読み込み
 
-本チュートリアルの以降のセクションでは、とりあえず2つの小さなデータセットサンプルを使って作業します。双方ともメディアの組織に関するデータが入っています。1つはニュースソースにおけるハイパーリンクとメンションのネットワークに関するものです。もう1つはメディアの立場と消費者を結ぶリンクのネットワークです。ここで扱うデータサンプルは小さいですが、私たちが作り出す解析や視覚化の背景にあるたくさんのアイデアは、中規模から大規模ネットワークに当てはまります。
+本チュートリアルでは、これ以降、2つの小さなデータセットを使って作業します。双方ともメディアの組織に関するデータが入っています。1つはニュースソースがハイパーリンクで提供されている (hyperlink) か、ニュースソースが言及されている (mention) かのネットワークデータです。もう1つはメディアの種類 (新聞、テレビ、ネット) と利用者数をリンクするネットワークです。ここで扱うデータサンプルは小さいですが、ここで行う解析や視覚化のために行うことは、中規模から大規模ネットワークにも応用できます。
 
-### 3.1 データセット１：エッジリスト
+### 3.1 データセット1: エッジリスト
 
-最初に私たちが扱うデータセットは、"Media-Example-NODES.csv"と"Media-Example-EDGES.csv"という２つのファイルから成ります(ここからダウンロード)。
+最初に私たちが扱うデータセットは、"Media-Example-NODES.csv"と"Media-Example-EDGES.csv"という２つのファイルから構成されます([ここからダウンロード](http://www.kateto.net/wordpress/wp-content/uploads/2016/01/netscix2016.zip))。
 
 ```{r, eval=F}
 nodes <- read.csv("Dataset1-Media-Example-NODES.csv", header=T, as.is=T)
@@ -760,7 +760,7 @@ nrow(nodes); length(unique(nodes$id))
 nrow(links); nrow(unique(links[,c("from", "to")]))
 ```
 
-固有のfrom-toコンビネーションよりも多くのリンクがあることに注意してください。つまり、このデータにおいては、同一の2つのノードの間に多重のリンクが存在するケースがあるということです。同一の2つのノードにまたがる同型("from"と"to"、そして"type")のリンクはaggregate()を用いてそれらの重みをまとめることで取り壊すことができ、simplify()は異なる型のリンクを壊してしまうため、ここでは使いません。
+ここで、from-toコンビネーションは同じものが複数あることに注意してください。つまり、このデータにおいては、同一の2つのノードの間に多重のリンクが存在するケースがあるということです。同一の2つのノードにまたがる同じ型 ("from"と"to"、そして"type") のリンクは `aggregate()` を用いて重みづけを合計することでまとめることができます。simplify()は異なる型のリンクもまとめてしまうため、ここでは使いません。
 
 ```{r, eval=F}
 links <- aggregate(links[,3], links[,-3], sum)
@@ -769,9 +769,9 @@ colnames(links)[4] <- "weight"
 rownames(links) <- NULL
 ```
 
-### 3.2 データセット２：行列
+### 3.2 データセット2: 行列
 
-2モードあるいは2部グラフには2つの異なる型のアクターとリンクがあり、同一の型同士ではなく、異なる型をまたいでいます。ここでの2つ目のメディアサンプルはそういった種類のネットワークで、ニュースソースとその消費者の間のリンクを調べるものです。
+2モードあるいは2部グラフには2つの異なる型の頂点集合 (actors) とリンクがあり、同一の型内ではなく、異なる型とリンクしています。ここでの2つ目のメディアサンプルはそういった種類のネットワークで、ニュースソースと利用者間のリンクを調べるものです。
 
 ```{r, eval=F}
 nodes2 <- read.csv("Dataset2-Media-User-Example-NODES.csv", header=T, as.is=T)
@@ -785,7 +785,7 @@ head(nodes2)
 head(links2)
 ```
 
-links2は2モードネットワークの隣接した行列であることがわかります：
+links2は2モードネットワークの隣接行列であることがわかります：
 
 ```{r, eval=F}
 links2 <- as.matrix(links2)
