--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -1037,7 +1037,7 @@ plot(net, edge.color=edge.col, edge.curved=.1)
 
 ### 5.2 ネットワークのレイアウト
 
-ネットワークのレイアウトは単純に言うとあるネットワークにおける各々のノードに与えられた座標を返すアルゴリズムということになります。レイアウトを考えるために、少し大きな80のノードを持つグラフを生成しましょう。sample_pa()機能を用いて1つのシンプルなグラフを作ります。1個のノードから始まり、Barabasi-Albertモデルのpreferential attachmentのプリセットレベルを元にさらにノードとリンクを加えていきます。
+ネットワークのレイアウトは、単純に言うと、あるネットワークにおける各々のノードに与えられた座標を返すアルゴリズムということになります。レイアウトを考えるために、少し大きな80のノードを持つグラフを生成しましょう。`sample_pa()` 機能を用いて1つのシンプルなグラフを作ります。1個のノードから始まり、Barabasi-Albertモデルの優先選択のプリセットレベルを元にさらにノードとリンクを加えていきます。
 
 ```{r, eval=T}
 net.bg <- sample_pa(80)
