--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -1049,20 +1049,20 @@ E(net.bg)$arrow.mode <- 0
 plot(net.bg)
 ```
 
-plot機能を使ってレイアウトを設定することもできます。
+plot関数を使ってレイアウトを設定することもできます。
 
 ```{r, eval=T}
 plot(net.bg, layout=layout_randomly)
 ```
 
-また、一歩進んで頂点の座標を計算することもできます。
+また、前もって頂点の座標を計算しておくこともできます。
 
 ```{r, eval=T}
 l <- layout_in_circle(net.bg)
 plot(net.bg, layout=l)
 ```
 
-lは単に、グラフにおけるN個のノードに対するx, yの座標の行列(Nx2)です。自分で簡単に生成することができます。
+`l` は単に、グラフにおけるN個のノードに対するx, yの座標の行列 (Nx2) です。自分で簡単に生成することができます。
 
 ```{r, eval=T}
 l <- cbind(1:vcount(net.bg), c(1, vcount(net.bg):2))
@@ -1072,7 +1072,7 @@ plot(net.bg, layout=l)
 このレイアウトはほんの一例ですが、あまり有用とは言えませんね。ありがたいことにigraphには備え付けのレイアウトがたくさんあります。例えば…
 
 ```{r, eval=T}
-# ランダムに配置
+# 頂点をランダムに配置
 l <- layout_randomly(net.bg)
 plot(net.bg, layout=l)
 ```
