--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -1089,17 +1089,17 @@ l <- layout_on_sphere(net.bg)
 plot(net.bg, layout=l)
 ```
 
-Fruchterman-Reingoldは今の時点でもっとも用いられている強制有向レイアウトのアルゴリズムです。強制有向レイアウトにおいては、できるだけエッジの長さが均一でお互いがクロスしないようにして見やすくしたグラフが作られ、一つの物理系システムとしてグラフがシミュレートされます。ノードは帯電した粒子で、お互いに近すぎると反発します。エッジはバネとして作用し、つながったノードを近づけようとします。その結果、ノードは描画エリアに均一に分布し、より多くのつながりを持ったノードが近づいているのが直感的にわかるレイアウトになります。 このアルゴリズムの欠点としては、処理にかなり時間を要する点です。ですので、頂点が1000を超すようなグラフにおいてはあまり用いられません。“重みづけ”のパラメータを設定することで、より重いエッジとつながっているノードの引力を増やすことができます。
+Fruchterman-Reingoldはもっともよく用いられている力指向 (force-directed) レイアウトのアルゴリズムです。力指向レイアウトは、できるだけエッジの長さが均一でお互いが交差しないようにして見やすいグラフを作ろうとします。このアルゴリズムでは、グラフの頂点と辺に仮想的な力を割り当て、力学的エネルギーの低い安定状態を探すことで、この目的を達成します。ノードは帯電した粒子で、お互いに近すぎると反発します。エッジはバネとして作用し、つながったノードを近づけようとします。その結果、ノードは描画エリアに均一に分布し、より多くのつながりを持ったノードがお互いに近いところにあるのが直感的にわかるレイアウトになります。 このアルゴリズムの欠点としては、処理にかなり時間を要する点です。ですので、頂点が1000を超すようなグラフにおいてはあまり用いられません。“重みづけ”のパラメータを設定することで、よりエッジの力を強めることでエッジとつながっているノードの引力を増すことができます。
 
 ```{r, eval=T}
 l <- layout_with_fr(net.bg)
 plot(net.bg, layout=l)
 ```
 
-このレイアウトは決定論的(次のステップが常に1つに決定づけられる)ではないことにお気づきでしょうか。runを押すごとに微妙に異なった結果が出力されるのです。レイアウトをlに保存することで、何回やっても完全に同じ結果を得ることができるので、時間発展グラフをプロットしたい時や、異なった関係性を知りたい時などに有用です。
+このレイアウトは決定論的(結果がが常に1つに決定づけられる)ではないことにお気づきでしょうか。グラフを作成するごとに微妙に異なった結果が出力されます。レイアウトを `l` で保存することで、何回やっても完全に同じ結果を得ることができるので、時系列で変化していくようなグラフやノードの異なる関係性などを知るグラフのような、グラフを複数回描画する時に、ノードを同じ場所にプロットしたい時に有用です。
 
 ```{r, eval=T}
-par(mfrow=c(2,2), mar=c(0,0,0,0)) # 2行2列で4つの図をプロットします
+par(mfrow=c(2,2), mar=c(0,0,0,0)) # 2行2列で4つの図をプロット
 plot(net.bg, layout=layout_with_fr)
 plot(net.bg, layout=layout_with_fr)
 plot(net.bg, layout=l)
@@ -1110,7 +1110,7 @@ plot(net.bg, layout=l)
 dev.off()
 ```
 
-デフォルトでは、プロットの座標はⅹ軸、y軸共に[-1,1] の間隔でリスケールされます。rescale=FALSEのパラメータでこの設定を変更し、スカラー法で座標に乗算することでマニュアルでプロットのリスケールができます。norm_coordsをつかえば、好きな境界でプロットを標準化できます。
+デフォルトでは、プロットの座標はⅹ軸、y軸共に[-1,1] の間隔でリスケールされます。`rescale=FALSE` のパラメータでこの設定を変更し、座標にスカラーを乗算することで手動でプロットのスケーリングができます。`norm_coords` をつかえば、好きな境界でプロットを標準化できます。
 
 ```{r, eval=T}
 l <- layout_with_fr(net.bg)
@@ -1126,14 +1126,14 @@ plot(net.bg, rescale=F, layout=l*1.0)
 dev.off()
 ```
 
-もう1つの有名な強制有向アルゴリズムである、Kamada Kawaiでもわかりやすい結果が得られます。Fruchterman Reingoldと同様に、ばねのシステムにおいてエネルギーが最小になるよう調整されます。
+その他の有名な力指向アルゴリズムである、Kamada Kawaiでもわかりやすい結果が得られます。Fruchterman Reingoldと同様に、ばねのシステムにおいてエネルギーが最小になるよう調整されます。
 
 ```{r, eval=T}
 l <- layout_with_kk(net.bg)
 plot(net.bg, layout=l)
 ```
 
-LGLアルゴリズムは大規模なネットワークグラフに向いています。ここでは1つのルートを特定することができます。すなわち、レイアウトの中央に位置するノードです。
+LGLアルゴリズムは大規模なネットワークグラフに向いています。ここではグラフの根っこを指定することができます。すなわち、レイアウトの中央に位置するノードです。
 
 ```{r, eval=T}
 plot(net.bg, layout=layout_with_lgl)
@@ -1143,7 +1143,7 @@ plot(net.bg, layout=layout_with_lgl)
 
 ```{r, eval=T}
 layouts <- grep("^layout_", ls("package:igraph"), value=TRUE)[-1]
-# グラフに適用しないレイアウトを削除します。
+# 今扱っているグラフに適合しないレイアウトを削除
 layouts <- layouts[!grepl("bipartite|merge|norm|sugiyama|tree", layouts)]
 
 par(mfrow=c(3,3), mar=c(1,1,1,1))
