--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -1155,7 +1155,7 @@ plot(net, edge.arrow.mode=0, layout=l, main=layout) }
 
 ### 5.3 ネットワークグラフをよりよくする
 
-![Fig5.3]("Fig5.3.png")
+![Fig5.3](Fig5.3.png)
 
 今のところ私たちのネットワークプロットはそれほど見やすいものではないですよね。ノードのタイプとサイズは見ればわかりますが、構造に関してはそれほどわかりません。というのも、調べようとしているリンクがすごく密だからです。ではどうすればよいかと言いますと、もっとも重要なつながりだけ残して残りを切り捨てることでネットワークを疎らにしてみるという方法です。
 
